syntax = "proto3";
package vulcanize.auction.v1beta1;

import "gogoproto/gogo.proto";
import "vulcanize/auction/v1beta1/types.proto";

option go_package = "github.com/tharsis/ethermint/x/auction/types";

// GenesisState defines the genesis state of the auction module
message GenesisState {
    Params params = 1 [(gogoproto.nullable) = false];
    repeated Auction auctions = 2 [
        (gogoproto.moretags) = "json:\"bonds\" yaml:\"bonds\""
    ];
}
