syntax = "proto3";
package vulcanize.registry.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/cerc-io/laconicd/x/registry/types";


message ServiceProviderRecord {
  string bond_id    = 1 [(gogoproto.moretags) = "json:\"bondId\" yaml:\"bondId\""];
  string laconic_id = 2 [(gogoproto.moretags) = "json:\"laconicId\" yaml:\"laconicId\""];
  X500   x500       = 3 [(gogoproto.moretags) = "json:\"x500\" yaml:\"x500\""];
  string type       = 4 [(gogoproto.moretags) = "json:\"type\" yaml:\"type\""];
  string version    = 6 [(gogoproto.moretags) = "json:\"version\" yaml:\"version\""];

  message X500 {
    string common_name       = 1 [(gogoproto.moretags) = "json:\"commonName\" yaml:\"commonName\""];
    string organization_unit = 2 [(gogoproto.moretags) = "json:\"organizationUnit\" yaml:\"organizationUnit\""];
    string organization_name = 3 [(gogoproto.moretags) = "json:\"organizationName\" yaml:\"organizationName\""];
    string locality_name     = 4 [(gogoproto.moretags) = "json:\"localityName\" yaml:\"localityName\""];
    string state_name        = 5 [(gogoproto.moretags) = "json:\"stateName\" yaml:\"stateName\""];
    string country           = 6 [(gogoproto.moretags) = "json:\"country\" yaml:\"country\""];
  }
}



message WebsiteRegistrationRecord {
  string url                          = 1 [(gogoproto.moretags) = "json:\"url\" yaml:\"url\""];
   map<string,string> repo_reference = 2
      [(gogoproto.moretags) = "json:\"repoReference\" yaml:\"repoReference\""];
   map<string,string> build_artifact_ref = 3 [(gogoproto.moretags) = "json:\"buildArtifactRef\" yaml:\"buildArtifactRef\""];
   map<string,string> tls_cert_ref       = 4 [(gogoproto.moretags) = "json:\"tlsCertRef\" yaml:\"tlsCertRef\""];
  string type               = 5 [(gogoproto.moretags) = "json:\"type\" yaml:\"type\""];
  string version            = 6 [(gogoproto.moretags) = "json:\"version\" yaml:\"version\""];
}

message GitRepository{
  string name =1  [(gogoproto.moretags) = "json:\"name\" yaml:\"name\""];
  string repo_reference=2 [(gogoproto.moretags) = "json:\"repo_reference\" yaml:\"repo_reference\""];
  string description=3  [(gogoproto.moretags) = "json:\"description\" yaml:\"description\""];
  string version            = 4 [(gogoproto.moretags) = "json:\"version\" yaml:\"version\""];
  string type =5 [(gogoproto.moretags) = "json:\"type\" yaml:\"type\""];
}

message Binary{
   map<string,string> hash_reference=1;
  string targeted_arch=2;
  string runtime_version=3;
   map<string,string> repo_reference=4;
  string version=5;
  string type=6;
}

message DockerImage{
  string image_id=1;
   map<string,string> binary_reference=2;
   map<string,string> repo_reference=3;
  string version=4;
  string type=5;
}

message WatcherRegistrationRecord{
  WatcherMetadata metadata =1;
   map<string,string> repo_reference=2;
  WASMBinary wasm=3;
  string version=4;
  string type=5;

  message WatcherMetadata{
    string version=1;
     map<string,string> chain_reference=2;
  }

  message WASMBinary{
     map<string,string> hash_reference=1;
    WASMBinaryMetadata metadata=2;
  }
  
  message WASMBinaryMetadata{
    string compiler_version=1;
    string execution_engine_version=2;
  }
}

message ResponderContract{
   map<string,string> service_provider_ref=1;
   map<string,string> auction_ref=2;
   map<string,string> watcher_ref=3;
  string version=4;
  string type=5;
}

message JSPackage{
   map<string,string> repo_reference=1;
   map<string,string> js_package_ref=2;
  string version=3;
  string type=4;
  string name =5;
}

message ChainRegistrationRecord{
  string name=1;
  repeated string ipld_types=2;
  string type=3;
  string version=4;
  string chain_id=5;
  string network_id=6;
   map<string,string> genesis_hash=7;
}